# pattern-matching-nester

./: .gitignore  README.md  debug_output.py  demo.py  experiment.py  helper.py  helper_nfp_standalone.py  ifp.py  nfp.py  nfp_standalone.py  pyproject.toml  seam_input.py
GarmentCode drop-ins/: wrappers.py
data/: example.xml  seamdefinition.xsd
pattern-matching-nester/: __init__.py  demo.py  export_svg.py  foo.py  helper.py  ifp.py  nfp.py  svg_helper.py
pattern-matching-nester/models/: pattern.py  piece.py
